Correct webpack import.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "backbone-deep-model",
   "description": "Improved support for models with nested attributes.",
+  "main": "distribution/deep-model.js",
   "author": {
     "name": "Charles Davison"
   },
